# scala-native-bindgen

./: .clang-format  .gitignore  .scalafmt.conf  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CycleDetection.h  Dockerfile  HeaderManager.cpp  HeaderManager.h  LICENCE.txt  LICENSE.txt  Main.cpp  NEWS.md  README.md  ScalaBindgen.cpp  ScalaBindgen.h  ScalaFrontend.h  SimpleTypeTests.cpp  TreeConsumer.h  TreeVisitor.cpp  TreeVisitor.h  TypeTranslator.cpp  TypeTranslator.h  Utils.h  build.sbt  cli.html  configuration.html  docker-compose.yml  index.html  integrating-bindings.html  limitations.html  make.sh~  paradox.json  sbt.html  scalaBindgen.cpp  search_index.json  stdHeaders.config  using-bindings.html  using-generated-bindings.html
.github/workflows/: ci.yaml
bindgen/: CMakeLists.txt  CustomNames.h  CycleDetection.h  Dockerfile  HeaderManager.cpp  HeaderManager.h  Main.cpp  TypeTranslator.cpp  TypeTranslator.h  Utils.h  valgrind-suppressions.txt
bindgen/defines/: DefineFinder.cpp  DefineFinder.h  DefineFinderAction.cpp  DefineFinderAction.h  DefineFinderActionFactory.cpp  DefineFinderActionFactory.h
bindgen/ir/: CycleNode.cpp  CycleNode.h  Define.cpp  Define.h  Enum.cpp  Enum.h  Function.cpp  Function.h  IR.cpp  IR.h  LiteralDefine.cpp  LiteralDefine.h  LocatableType.cpp  LocatableType.h  Location.cpp  Location.h  LocationManager.cpp  LocationManager.h  PossibleVarDefine.cpp  PossibleVarDefine.h  Record.cpp  Record.h  Struct.cpp  Struct.h  TypeAndName.cpp  TypeAndName.h  TypeDef.cpp  TypeDef.h  Union.cpp  Union.h  VarDefine.cpp  VarDefine.h  Variable.cpp  Variable.h
bindgen/ir/location/: Location.h  LocationManager.cpp  LocationManager.h  ScalaLocation.cpp  ScalaLocation.h  SourceLocation.cpp  SourceLocation.h
bindgen/ir/types/: ArrayType.cpp  ArrayType.h  FunctionPointerType.cpp  FunctionPointerType.h  PointerType.cpp  PointerType.h  PrimitiveType.cpp  PrimitiveType.h  SimpleType.cpp  SimpleType.h  Type.cpp  Type.h
bindgen/utils/: WarningManager.cpp  WarningManager.h
bindgen/visitor/: ScalaFrontendAction.cpp  ScalaFrontendAction.h  ScalaFrontendActionFactory.cpp  ScalaFrontendActionFactory.h  TreeConsumer.h  TreeVisitor.cpp  TreeVisitor.h
bindings/: iconv.html  index.html  posix.html  utf8proc.html
command-line-usage/: index.html
contrib/: bindings.html  cmake.html  docker-compose.html  guidelines.html  index.html  releasing.html
docs/: index.md  obtaining-bindgen.md
docs/src/main/paradox/: index.md
docs/src/main/paradox/command-line-usage/: index.md
docs/src/main/paradox/obtaining-bindgen/: cmake.md  docker-container.md  index.md
docs/src/paradox/: cli.md  configuration.md  index.md  integrating-bindings.md  limitations.md  sbt.md  using-bindings.md  using-generated-bindings.md
docs/src/paradox/bindings/: iconv.md  index.md  posix.md  utf8proc.md
docs/src/paradox/command-line-usage/: index.md
docs/src/paradox/contrib/: bindings.md  cmake.md  docker-compose.md  index.md  releasing.md
docs/src/paradox/integrating-bindings/: index.md
docs/src/paradox/limitations/: index.md
docs/src/paradox/obtaining-bindgen/: cmake.md  docker-compose.md  docker-container.md  index.md  sbt-plugin.md
docs/src/paradox/resources/: build.gradle  build.sbt  pom.xml
docs/src/paradox/using-generated-bindings/: README.md
docs/src/test/resources/: vector.c  vector.h
docs/src/test/resources/3rd-party-bindings/: config.json  config.yml  geometry.c  geometry.h
docs/src/test/resources/scala-native-bindings/: config.json  config.yml  wordcount.c  wordcount.h
docs/src/test/resources/using-bindings/: vector.h
docs/src/test/scala/org/example/: Geometry.scala  WordCount.scala  vector.scala
integrating-bindings/: index.html
ir/: Enum.cpp  Enum.h  Function.cpp  Function.h  IR.cpp  IR.h  Struct.cpp  Struct.h  TypeAndName.cpp  TypeAndName.h  TypeDef.cpp  TypeDef.h
limitations/: index.html
obtaining-bindgen/: cmake.html  docker-compose.html  docker-container.html  index.html  sbt-plugin.html
project/: BindingHelpers.scala  ParadoxSupport.scala  plugins.sbt
proto/: ir.proto
resources/: build.gradle  pom.xml
sbt-scala-native-bindgen/src/sbt-test/bindgen/generate/: build.sbt  test
sbt-scala-native-bindgen/src/sbt-test/bindgen/generate/expected/: core.scala  stdlib.scala
sbt-scala-native-bindgen/src/sbt-test/bindgen/generate/project/: plugins.sbt
scripts/: docker-bindgen.sh  docker-deploy.sh  docker-test.sh  linker.sh  prepare-release.sh  scalafmt  test.sh
search/: search_index.json
tests/: build.sbt  tests.cpp
tests/libTest/: build.sh  libscbintest.c  libscbintest.h
tests/native/scala-libtest/: build.sbt
tests/native/scala-libtest/src/main/scala/: Hello.scala
tests/native/scala-uv/: .gitignore
tests/native/scala-uv/src/main/scala/: Hello.scala  dirent.scala  in.scala  netdb.scala  semaphore.scala  stdint.scala  types.scala  uv.scala
tests/samples/: AnonymousTypes.h  AnonymousTypes.scala  CustomNames.scala  Cycles.h  Cycles.scala  Define.h  Define.scala  Enum.c  Enum.h  Enum.scala  Extern.c  Extern.h  Extern.scala  Function.c  Function.h  Function.scala  IncludesHeader.h  IncludesHeader.scala  LiteralDefine.h  LiteralDefine.scala  NativeTypes.h  NativeTypes.scala  OpaqueTypes.h  OpaqueTypes.scala  PrivateMembers.h  PrivateMembers.scala  ReservedWords.h  ReservedWords.scala  ReuseBindings.h  ReuseBindings.json  ReuseBindings.scala  ReuseBindings.yml  Struct.c  Struct.h  Struct.scala  Typedef.h  Typedef.scala  Union.c  Union.h  Union.scala  (+5 more)
tests/samples/include/: CustomNames.h  OpaqueTypes.h  included.h
tests/src/test/scala/org/scalanative/bindgen/: BindgenReportingSpec.scala  BindgenSpec.scala
tests/using/: build.sh  build2.sh  main  main.c
tools/src/main/scala/org/scalanative/bindgen/: Bindgen.scala  BindingOptions.scala  Bindings.scala  Builder.scala
using-generated-bindings/: README.html  index.html
visitor/: ScalaFrontendAction.cpp  ScalaFrontendAction.h  ScalaFrontendActionFactory.cpp  ScalaFrontendActionFactory.h  TreeConsumer.h  TreeVisitor.cpp  TreeVisitor.h
(+38 files in other folders)
